--- a/html and css/index.html
+++ b/html and css/index.html
@@ -28,27 +28,27 @@
         <!-- Articles -->
          <ul class="articles">
           <li class="articles-item">
-            <h2 class="articles-title"><a href="#" class="articles-link">npm audit: Broken by Design</a></h2>
+            <h2 class="articles-title"><a href="#" class="articles-link">Npm audit: Broken by Design</a></h2>
             <p class="articles-text">Found 99 vulnerabilities (84 moderately irrelevant, 15 highly irrelevant)</p>
           </li>
 
           <li class="articles-item">
-            <h2 class="articles-title"><a href="#" class="articles-link">npm audit: Broken by Design</a></h2>
+            <h2 class="articles-title"><a href="#" class="articles-link">Npm audit: Broken by Design</a></h2>
             <p class="articles-text">Found 99 vulnerabilities (84 moderately irrelevant, 15 highly irrelevant)</p>
           </li>
 
           <li class="articles-item">
-            <h2 class="articles-title"><a href="#" class="articles-link">npm audit: Broken by Design</a></h2>
+            <h2 class="articles-title"><a href="#" class="articles-link">Npm audit: Broken by Design</a></h2>
             <p class="articles-text">Found 99 vulnerabilities (84 moderately irrelevant, 15 highly irrelevant)</p>
           </li>
 
           <li class="articles-item">
-            <h2 class="articles-title"><a href="#" class="articles-link">npm audit: Broken by Design</a></h2>
+            <h2 class="articles-title"><a href="#" class="articles-link">Npm audit: Broken by Design</a></h2>
             <p class="articles-text">Found 99 vulnerabilities (84 moderately irrelevant, 15 highly irrelevant)</p>
           </li>
 
           <li class="articles-item">
-            <h2 class="articles-title"><a href="#" class="articles-link">npm audit: Broken by Design</a></h2>
+            <h2 class="articles-title"><a href="#" class="articles-link">Npm audit: Broken by Design</a></h2>
             <p class="articles-text">Found 99 vulnerabilities (84 moderately irrelevant, 15 highly irrelevant)</p>
           </li>
          </ul>
